--- a/src/app/componets/maneger/employee-list/employee-list.component.html
+++ b/src/app/componets/maneger/employee-list/employee-list.component.html
@@ -16,7 +16,7 @@
       </mat-form-field>
 
       <!-- Hire Date Filter -->
-      <mat-form-field appearance="outline">
+      <mat-form-field appearance="outline" class="search-field">
         <mat-label>Hire Date</mat-label>
         <input matInput [matDatepicker]="picker" [formControl]="hireDateFilter" placeholder="MM/DD/YYYY">
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
